--- a/index6.html
+++ b/index6.html
@@ -115,7 +115,7 @@
 			<a-entity light="intensity:0.6" position="-0.5 1 1" data-aframe-default-light="" aframe-injected=""></a-entity>
 			
       <a-entity>
-        <a-cylinder position="0 0.5 0" radius="19" height="12" side="back" open-ended="true" src="img/bg/art.png"
+        <a-cylinder position="0 0.5 0" radius="19" height="12" side="back" open-ended="true" src="img/bg/art2.png"
                     color="#FFF"></a-cylinder>
       </a-entity>
     </a-scene>
