--- a/index8.html
+++ b/index8.html
@@ -64,36 +64,16 @@
                 </a-entity>				
 				
      <!--model-->      
-           <a-entity layout="type:circle;radius:20" rotation="0 180 0">
-<a-entity mixin="bar" material="src:url(img/bg/shirley.jpg);" geometry=""></a-entity>
-<a-entity mixin="bar" material="src:url(img/bg/zaeden.jpg);" geometry=""></a-entity>
-<a-entity mixin="bar" material="src:url(img/bg/rahul.jpg);" geometry=""></a-entity>
-<a-entity mixin="bar" material="src:url(img/bg/biswa.jpg);" geometry=""></a-entity>
-<a-entity mixin="bar" material="src:url(img/bg/shirley.jpg);" geometry=""></a-entity>
-<a-entity mixin="bar" material="src:url(img/bg/zaeden.jpg);" geometry=""></a-entity>
-<a-entity mixin="bar" material="src:url(img/bg/rahul.jpg);" geometry=""></a-entity>
-<a-entity mixin="bar" material="src:url(img/bg/biswa.jpg);" geometry=""></a-entity>
-<a-entity mixin="bar" material="src:url(img/bg/shirley.jpg);" geometry=""></a-entity>
-<a-entity mixin="bar" material="src:url(img/bg/zaeden.jpg);" geometry=""></a-entity>
-<a-entity mixin="bar" material="src:url(img/bg/rahul.jpg);" geometry=""></a-entity>
-<a-entity mixin="bar" material="src:url(img/bg/biswa.jpg);" geometry=""></a-entity>
-<a-entity mixin="bar" material="src:url(img/bg/shirley.jpg);" geometry=""></a-entity>
-<a-entity mixin="bar" material="src:url(img/bg/zaeden.jpg);" geometry=""></a-entity>
-<a-entity mixin="bar" material="src:url(img/bg/rahul.jpg);" geometry=""></a-entity>
-<a-entity mixin="bar" material="src:url(img/bg/shirley.jpg);" geometry=""></a-entity>
-<a-entity mixin="bar" material="src:url(img/bg/zaeden.jpg);" geometry=""></a-entity>
-<a-entity mixin="bar" material="src:url(img/bg/rahul.jpg);" geometry=""></a-entity>
-<a-entity mixin="bar" material="src:url(img/bg/biswa.jpg);" geometry=""></a-entity>
-<a-entity mixin="bar" material="src:url(img/bg/shirley.jpg);" geometry=""></a-entity>
-<a-entity mixin="bar" material="src:url(img/bg/zaeden.jpg);" geometry=""></a-entity>
-<a-entity mixin="bar" material="src:url(img/bg/rahul.jpg);" geometry=""></a-entity>
-<a-entity mixin="bar" material="src:url(img/bg/biswa.jpg);" geometry=""></a-entity>
-<a-entity mixin="bar" material="src:url(img/bg/shirley.jpg);" geometry=""></a-entity>
-<a-entity mixin="bar" material="src:url(img/bg/zaeden.jpg);" geometry=""></a-entity>
-<a-entity mixin="bar" material="src:url(img/bg/rahul.jpg);" geometry=""></a-entity>
-<a-entity mixin="bar" material="src:url(img/bg/shirley.jpg);" geometry=""></a-entity>
-<a-entity mixin="bar" material="src:url(img/bg/biswa.jpg);" geometry=""></a-entity>
-</a-entity>
+          <a-curvedimage src="img/bg/shirley.jpg" radius="18" theta-length="30" height="9" theta-start="0"></a-curvedimage>
+		   <a-curvedimage src="img/bg/biswa.jpg" radius="18" theta-length="30" height="9" theta-start="40"></a-curvedimage>
+		    <a-curvedimage src="img/bg/zaeden.jpg" radius="18" theta-length="30" height="9" theta-start="80"></a-curvedimage>
+			 <a-curvedimage src="img/bg/rahul.jpg" radius="18" theta-length="30" height="9" theta-start="120"></a-curvedimage>
+			  <a-curvedimage src="img/bg/mrindia.jpg" radius="18" theta-length="30" height="9" theta-start="160"></a-curvedimage>
+			  <a-curvedimage src="img/bg/zaeden.jpg" radius="18" theta-length="30" height="9" theta-start="200"></a-curvedimage>
+			 <a-curvedimage src="img/bg/rahul.jpg" radius="18" theta-length="30" height="9" theta-start="240"></a-curvedimage>
+			  <a-curvedimage src="img/bg/mrindia.jpg" radius="18" theta-length="30" height="9" theta-start="280"></a-curvedimage>
+			  <a-curvedimage src="img/bg/zaeden.jpg" radius="18" theta-length="30" height="9" theta-start="320"></a-curvedimage>
+			 <a-curvedimage src="img/bg/rahul.jpg" radius="18" theta-length="30" height="9" theta-start="360"></a-curvedimage>
 	  
             <a-entity id="model" data-vrscale="0.5 0.5 0.5" data-vr-model-y-axis="0.7" position="3 -1 0">             
                 
@@ -115,7 +95,7 @@
 			<a-entity light="intensity:0.6" position="-0.5 1 1" data-aframe-default-light="" aframe-injected=""></a-entity>
 			
       <a-entity>
-        <a-cylinder position="0 0.5 0" radius="19" height="12" side="back" src="img/bg/art2.png"
+        <a-cylinder position="0 0.5 0" radius="19" height="12" side="back" src="img/bg/art.png"
                     color="#FFF"></a-cylinder>
       </a-entity>
     </a-scene>
