--- a/index.html
+++ b/index.html
@@ -149,11 +149,11 @@
 
       <div class="footer-right">
 
-        <a href="https://www.facebook.com/taarangana"><i class="fa fa-facebook"></i></a>
-        <a href="https://twitter.com/_taarangana"><i class="fa fa-twitter"></i></a>
+        <a href="https://www.facebook.com/taarangana"><img src="img/logo/facebook-logo-button.png" style="height:15px;width:15px;" /></a>
+        <a href="https://twitter.com/_taarangana"><img src="img/logo/twitter-logo-silhouette-white.png" style="height:15px;width:15px;" /></a>
         
-        <a href="https://www.instagram.com/taarangana"><i class="fa fa-instagram"></i></a>
-        <a href="http://www.youtube.com/c/TaaranganaIGDTUW "><i class="fa fa-youtube"></i></a>
+        <a href="https://www.instagram.com/taarangana"><img src="img/logo/instagram-logo.png" style="height:15px;width:15px;" /></i></a>
+        <a href="http://www.youtube.com/c/TaaranganaIGDTUW "><img src="img/logo/youtube.png" style="height:15px;width:15px;" /></a>
 
       </div>
 
